FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs) FEAT-3799 [DEV] Create part of screen to add POs to QuoteResquest

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -183,4 +183,19 @@
   <data name="USERNAME" xml:space="preserve">
     <value>User Name</value>
   </data>
+  <data name="POID" xml:space="preserve">
+    <value>Id</value>
+  </data>
+  <data name="PONAME" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="PO_GRID_TITLE" xml:space="preserve">
+    <value>Product Offerings</value>
+  </data>
+  <data name="REMOVE_PO" xml:space="preserve">
+    <value>Remove product offering</value>
+  </data>
+  <data name="SELECT_POS" xml:space="preserve">
+    <value>Select Product Offerings</value>
+  </data>
 </root>
