CORE-7742 Quoting UI: 'Quotes List' grid does not have a column 'Currency' FEAT-3799 [DEV] Create part of screen to add POs to QuoteResquest FEAT-3797 [DEV] Create aspx page for create quote screen FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs)

--- a/Quoting/App_LocalResources/QuoteList.aspx.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.resx
@@ -127,7 +127,10 @@
         <value>Currency</value>
     </data>
     <data name="ID_QUOTE" xml:space="preserve">
-        <value>Id Quote</value>
+        <value>Quote Id</value>
+    </data>
+    <data name="IS_GROUPSUBSCRIPTION" xml:space="preserve">
+        <value>Is group subscription</value>
     </data>
     <data name="MTTitle1Resource1.Text" xml:space="preserve">
         <value>Quotes List</value>
