FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs) FEAT-3797 [DEV] Create aspx page for create quote screen

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -130,7 +130,7 @@
     <value>Start date</value>
   </data>
   <data name="MTPanelQuoteAccountsResource.Text" xml:space="preserve">
-    <value>Accounts for quote</value>
+    <value>Accounts and product offerings for quote</value>
   </data>
   <data name="dpEndDateResource1.Text" xml:space="preserve">
     <value>End date</value>
