FEAT-3800 Create part of the screen to set UDRC metrics for selected POs First implementation of UDRC grid Reviewer RPuzikov
Conflicts:
	Source/MetraTech/UI/MetraNet/Quoting/App_LocalResources/CreateQuote.aspx.resx
	Source/MetraTech/UI/MetraNet/Quoting/CreateQuote.aspx

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -189,6 +189,15 @@
   <data name="SELECT_POS" xml:space="preserve">
     <value>Select Product Offerings</value>
   </data>
+  <data name="EDIT_UDRC_VALUE" xml:space="preserve">
+    <value>Edit UDRC value</value>
+  </data>
+  <data name="TEXT_REFRESH" xml:space="preserve">
+    <value>Refresh UDRCs grid</value>
+  </data>
+  <data name="TEXT_REFRESH_UDRC_GRID" xml:space="preserve">
+    <value>Refresh UDRCs grid</value>
+  </data>
   <data name="ADD_ICB" xml:space="preserve">
     <value>Add ICB</value>
   </data>
