FEAT-3798 [DEV] Create part of screen to add accounts to QuoteResquest FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs)
Added group subscription

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -165,9 +165,6 @@
   <data name="REMOVE_ACCOUNT" xml:space="preserve">
     <value>Remove Account</value>
   </data>
-  <data name="ISGROUP" xml:space="preserve">
-    <value>Is Group Subscription</value>
-  </data>
   <data name="SELECT_ACCOUNTS" xml:space="preserve">
     <value>Select Accounts</value>
   </data>
@@ -224,5 +221,11 @@
   </data>
   <data name="UNIT_VALUE" xml:space="preserve">
     <value>Unit Value</value>
+  </data>
+  <data name="ISGROUP.Text" xml:space="preserve">
+    <value>Is Group Subscription</value>
+  </data>
+  <data name="ISGROUP" xml:space="preserve">
+    <value>Is corp.</value>
   </data>
 </root>
