FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs) FEAT-3918 [DEV] Create part of the create quote screen  for input of ICBs
Added saving on postback for UDRCs and ICBs data

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -204,7 +204,7 @@
   <data name="UNIT_VALUE" xml:space="preserve">
     <value>Unit Value</value>
   </data>
-  <data name="ISGROUP.Text" xml:space="preserve">
+  <data name="ISGROUP.BoxLabel" xml:space="preserve">
     <value>Is Group Subscription</value>
   </data>
   <data name="ISGROUP" xml:space="preserve">
@@ -221,6 +221,9 @@
   </data>
   <data name="TEXT_ADD_ICB" xml:space="preserve">
     <value>Add Custom Rate</value>
+  </data>
+  <data name="MTbtnCancelResource1.Text" xml:space="preserve">
+    <value>Cancel</value>
   </data>
   <data name="MTTitleCreateQuoteResource" xml:space="preserve">
     <value>Create Quote</value>
