--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -240,7 +240,16 @@
   <data name="TEXT_CANCEL" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="TEXT_END_DATE" xml:space="preserve">
+    <value>End Date</value>
+  </data>
   <data name="TEXT_OK" xml:space="preserve">
     <value>OK</value>
+  </data>
+  <data name="TEXT_START_DATE" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
+  <data name="TEXT_VALUE" xml:space="preserve">
+    <value>Value</value>
   </data>
 </root>
