--- a/App_GlobalResources/JSConsts.es.resx
+++ b/App_GlobalResources/JSConsts.es.resx
@@ -1208,32 +1208,35 @@
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Passwords do not match.</value>
-  </data>  
+  </data>
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Enter a valid phone number. Format: 555-555-5555</value>
-  </data>    
+  </data>
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Credit card format is invalid</value>
-  </data>      
+  </data>
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) CV Number is invalid</value>
-  </data>        
+  </data>
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) SSN format: xxx-xx-xxxx</value>
-  </data>          
+  </data>
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Only numeric digits are allowed</value>
-  </data>            
+  </data>
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Zipcode is invalid</value>
-  </data>              
+  </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(SPANISH) Middle initial is invalid</value>
-  </data>      
+  </data>
   <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
     <value>(SPANISH) Retry</value>
-  </data>    
+  </data>
   <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
     <value>{SPANISH} Resubmitted Request</value>
-  </data>               
+  </data>
+  <data name="TEXT_SELECT_PO_ERROR" xml:space="preserve">
+    <value />
+  </data>
 </root>
