FEAT-2887 UI: "Simple" UI Screen To Create A Quote (As MN user I'd like to have UI screen that allows me to set quote parameters and generate quote so I can use it for my business needs) FEAT-3802 [DEV] Create "Generate quote" button
Added different ICB form depends on PI type

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -231,6 +231,9 @@
   <data name="REMOVE_ICB" xml:space="preserve">
     <value>Remove ICB</value>
   </data>
+  <data name="REMOVE_UDRC" xml:space="preserve">
+    <value>Remove UDRC</value>
+  </data>
   <data name="TEXT_ADDING_ICB" xml:space="preserve">
     <value>Adding ICB</value>
   </data>
