FEAT-3996 [DEV] Uncheck "Is Group Subscription" on load screen first time and add confirm message when "Is Group Subscription" and ICB Code reviewer: DStepanov

--- a/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
@@ -252,4 +252,7 @@
   <data name="USERNAME" xml:space="preserve">
     <value>User Name</value>
   </data>
+  <data name="ICB_GROUP_CONFIRM" xml:space="preserve">
+    <value>ICB for group subscriptions will not be applied (current limitation)</value>
+  </data>
 </root>
