--- a/Quoting/App_LocalResources/CreateQuote.aspx.pt-br.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.pt-br.resx
@@ -252,4 +252,7 @@
   <data name="TEXT_VALUE" xml:space="preserve">
     <value />
   </data>
+  <data name="ICB_GROUP_CONFIRM" xml:space="preserve">
+    <value />
+  </data>
 </root>
