--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -261,4 +261,7 @@
   <data name="TEXT_VALUE" xml:space="preserve">
     <value>Value</value>
   </data>
+  <data name="ICB_GROUP_CONFIRM" xml:space="preserve">
+    <value>ICB for group subscriptions will not be applied (current limitation)</value>
+  </data>
 </root>
