--- a/Quoting/App_LocalResources/SelectPOForQuote.aspx.en-GB.resx
+++ b/Quoting/App_LocalResources/SelectPOForQuote.aspx.en-GB.resx
@@ -117,70 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CURRENCY" xml:space="preserve">
-    <value>Currency</value>
-  </data>
-  <data name="ID_QUOTE" xml:space="preserve">
-    <value>Id Quote</value>
-  </data>
-  <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Quotes List</value>
-  </data>
-  <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Quotes List</value>
+  <data name="GRID_TITLE" xml:space="preserve">
+    <value>Availible product offerings</value>
   </data>
   <data name="PO_DESCRIPTION" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="PO_ID" xml:space="preserve">
+    <value>Product offering ID</value>
+  </data>
   <data name="PO_NAME" xml:space="preserve">
     <value>Name</value>
   </data>
-  <data name="PRODUCT_OFFERING_ID" xml:space="preserve">
-    <value>ID of Product offering</value>
-  </data>
-  <data name="QUOTE_ACCOUNTS" xml:space="preserve">
-    <value>Account's IDs</value>
-  </data>
-  <data name="QUOTE_DESCRIPTION" xml:space="preserve">
-    <value>Quote description</value>
-  </data>
-  <data name="QUOTE_FAILEDMESSAGE" xml:space="preserve">
-    <value>Failed message</value>
-  </data>
-  <data name="QUOTE_LIST" xml:space="preserve">
-    <value>Quotes list</value>
-  </data>
-  <data name="QUOTE_PARAMETERS" xml:space="preserve">
-    <value>Quote parameters</value>
-  </data>
-  <data name="QUOTE_POS" xml:space="preserve">
-    <value>Product offerings's IDs</value>
-  </data>
-  <data name="QUOTE_STATUS" xml:space="preserve">
-    <value>Quote status</value>
-  </data>
-  <data name="QuoteListTitle.Text" xml:space="preserve">
-    <value>Quotes List</value>
-  </data>
-  <data name="REPORT_LINK" xml:space="preserve">
-    <value>Report link</value>
-  </data>
-  <data name="STATUS_CLEANUP" xml:space="preserve">
-    <value>Status cleanup</value>
-  </data>
-  <data name="STATUS_REPORT" xml:space="preserve">
-    <value>Status report</value>
-  </data>
-  <data name="TOTAL_AMOUNT" xml:space="preserve">
-    <value>Total amount</value>
-  </data>
-  <data name="TOTAL_TAX" xml:space="preserve">
-    <value>Total Tax</value>
-  </data>
-  <data name="GRID_TITLE" xml:space="preserve">
-    <value>Availible product offerings</value>
-  </data>
-  <data name="SELECT_POS" xml:space="preserve">
-    <value>Select Product Offerings</value>
+  <data name="PO_PARTITIONID" xml:space="preserve">
+    <value>Partition Id</value>
   </data>
 </root>
