FEAT-3778 UI: As MN user I'd like to have ability to convert a quote to a Subscription FEAT-3912 [DEV] Create QuotingService.ConvertToSubscription method FEAT-3913 [DEV] Cover ConvertToSubscription method by functional tests FEAT-3914 [DEV] Add ability to convert quote from the UI
Review of RPuzikov

--- a/config/Localization/metratech.com/metratech.com_us.xml
+++ b/config/Localization/metratech.com/metratech.com_us.xml
@@ -195,8 +195,16 @@
             <Value>Prebill Adjustment Amount</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/QuoteStatus/Actualized</Name>
+            <Value>Actualized</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/QuoteStatus/Complete</Name>
             <Value>Complete</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/QuoteStatus/Converted</Name>
+            <Value>Actualized</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/QuoteStatus/Failed</Name>
