--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1233,4 +1233,11 @@
   <data name="TEXT_SELECT_PO_ERROR" xml:space="preserve">
     <value />
   </data>
+    <data name="TEXT_CONVERT" xml:space="preserve">
+    <value>Convert</value>
+  </data>
+  <data name="TEXT_CONVERT_MESSAGE" xml:space="preserve">
+    <value>Are you sure that you want to convert quote to subscriptions?</value>
+  </data>
+
 </root>
